# TDChess

./: .gitignore  CMakeLists.txt  README.md  board.c  board.h  check_dataset.py  diagnose_dataset.py  eval.c  generate_stockfish_dataset.py  main.c  movegen.c  movegen.h  neural.c  neural.h  perft.c  perft.h  plan.md  pyproject.toml  python_binding.c  python_binding.h  pytorch_binding.cpp  search.c  search.h  td_learning.c  td_learning.h  tdchess_pipeline.py  train_neural.py  train_pipeline.sh  visualization.c  visualization.h  zobrist.h
.github/: copilot-instructions.md
.github/workflows/: ci.yml
engine/: __init__.py  board.c  board.h  eval.c  eval.h  main.c  neural.c  perft.c  perft.h  python_binding.c  pytorch_binding.cpp  pytorch_binding.h  search.c  search.h  self_play.c  self_play.h  td_learning.c  td_learning.h  visualization.c  visualization.h  zobrist.c
training/: README.md  check_dataset.py  diagnose_dataset.py  evaluate_fen.py  generate_stockfish_dataset.py  tdchess_pipeline.py  train_neural.py
